0.11.0/_sources/_autosummary/baybe.recommenders.pure.bayesian.base.BayesianRecommender.rst.txt
BayesianRecommender
===================

.. currentmodule:: baybe.recommenders.pure.bayesian.base

.. autoclass:: BayesianRecommender
   :members:                              
   :show-inheritance:                 
   :inherited-members:

   
   
   .. rubric:: Public methods

   .. autosummary::
   
      ~BayesianRecommender.__init__
      ~BayesianRecommender.get_surrogate
      ~BayesianRecommender.recommend
   
   

   
   
   .. rubric:: Public attributes and properties

   .. autosummary::
   
      ~BayesianRecommender.acquisition_function
      ~BayesianRecommender.acquisition_function_cls
      ~BayesianRecommender.surrogate_model
      ~BayesianRecommender.compatibility
      ~BayesianRecommender.allow_repeated_recommendations
      ~BayesianRecommender.allow_recommending_already_measured
      ~BayesianRecommender.allow_recommending_pending_experiments
   
   