0.15.0/_sources/_autosummary/baybe.recommenders.pure.bayesian.base.BayesianRecommender.rst.txt
BayesianRecommender
===================

.. currentmodule:: baybe.recommenders.pure.bayesian.base

.. autoclass:: BayesianRecommender
   :members:                              
   :special-members: __call__
   :show-inheritance:                 
   :inherited-members:

   
   
   .. rubric:: Public methods

   .. autosummary::
   
      ~BayesianRecommender.__init__
   
      ~BayesianRecommender.acquisition_values
   
      ~BayesianRecommender.get_acquisition_function
   
      ~BayesianRecommender.get_surrogate
   
      ~BayesianRecommender.joint_acquisition_value
   
      ~BayesianRecommender.recommend
   
   
   

   
   
   .. rubric:: Public attributes and properties

   .. autosummary::
   
      ~BayesianRecommender.acquisition_function
      ~BayesianRecommender.allow_recommending_already_measured
      ~BayesianRecommender.allow_recommending_pending_experiments
      ~BayesianRecommender.allow_repeated_recommendations
      ~BayesianRecommender.supports_discrete_subset_generating_constraints
      ~BayesianRecommender.compatibility
   
   